--- a/login/login.css
+++ b/login/login.css
@@ -1,9 +1,12 @@
 
 :root{
     --font-family: "Roboto", sans-serif; /*variables for color and font style*/
-    --font-color: white;
+    --font-color: rgb(51,51, 51);
     --background-color: black;
     --font-weight: bolder;
+    --backgroundForContainer: rgb(211, 211, 211);
+    --containerHeight: 45%;
+    --containerWidth: 30%;
 }
 
 body{
@@ -18,4 +21,35 @@ body{
     color: var(--font-color);
     font-family: var(--font-family);
     font-weight: var(--font-weight);
+}
+
+.container{
+    background-color: var(--backgroundForContainer);
+
+    height: var(--containerHeight);
+    width: var(--containerWidth);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+input{
+    margin: .5em 0;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+
+    font-weight: var(--font-weight);
+    font-size: 16px;
+}
+
+input:focus{            /*pseudo class works when entering*/
+    outline: none;
+    border-color: #3498db;
+    box-shadow: 0 0 5px rgba(52, 52, 219, 0.5);
+}
+
+[type="submit"]{
+    float: right;
 }
