--- a/login/login.css
+++ b/login/login.css
@@ -4,14 +4,14 @@
     --font-color: rgb(51,51, 51);
     --background-color: black;
     --font-weight: bolder;
-    --backgroundForContainer: rgb(211, 211, 211);
-    --containerHeight: 45%;
+    --backgroundForSection: rgb(211, 211, 211);
+    --containerHeight: 40%;
     --containerWidth: 30%;
 }
 
 body{
     margin: 0;
-    height: 100dvh;
+    min-height: 100dvh;
 
     display: flex;
     align-items: center;   /*to arrange contents inside body to the center of webpage*/
@@ -23,15 +23,30 @@ body{
     font-weight: var(--font-weight);
 }
 
+.hidden{
+    display: none;
+}
+
 .container{
-    background-color: var(--backgroundForContainer);
-
-    height: var(--containerHeight);
-    width: var(--containerWidth);
-
     display: flex;
     align-items: center;
     justify-content: center;
+
+    background-color: rgb(11, 130, 235);
+}
+.form{
+    background-color: var(--backgroundForSection);
+    padding: 2em;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.signinSection, .signupSection{
+    padding: 1em;
 }
 
 input{
@@ -53,3 +68,4 @@ input:focus{            /*pseudo class works when entering*/
 [type="submit"]{
     float: right;
 }
+
