--- a/login/login.css
+++ b/login/login.css
@@ -69,7 +69,7 @@ input:focus{
     font-weight: 500;
     outline: none; 
     border-radius: 1em;
-    border-bottom: 1px solid #007bff;;
+    border-bottom: 1px solid #007bff;
     box-shadow: 0px 0px 8px rgba(0, 123, 255, 0.603);
 }
 .button{
