--- a/login/login.css
+++ b/login/login.css
@@ -87,4 +87,8 @@ input:focus{
         flex-direction: column;
         margin: 5em;
     }
+    p{
+        margin: 0;
+        padding: 0;
+    }
 }
