--- a/home/style.css
+++ b/home/style.css
@@ -2,13 +2,12 @@
     --bgcolor: #4a5153;
     --headingcolor: #FFFFFF;
     --headingfont: 'Tilt Prism', cursive;
-    --headingsize: 4rem;
+    --headingsize: 3rem;
 
     --paragraphcolor: #cccccc;
     --paragraphsize: 2rem;
     --paragraphfont: 'Roboto Condensed', sans-serif;
 }
-
 
 body,
 h1,
@@ -22,6 +21,7 @@ a{
     color: var(--paragraphcolor);
 
 }
+
 h1
 {
     font-family: var(--headingfont);
@@ -34,29 +34,70 @@ p,h2{
     color: var(--paragraphcolor);
 }
 
-.container{
+/* .container{
     margin-top: 7em;
-}
+} */
 
 header{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1em;
+    background-color: var(--bgcolor);
 
-    position: fixed;
+    /* position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    z-index: 100;
+    z-index: 100; */
 }
+.logo{
+    display: flex;
+}
+
 .options{
     display: flex;
-    gap: 2em;
+    justify-content: center;
+    align-items: center;
 }
-#button-log-in{
+.options h2{
+    font-size: 2rem;
+    text-align: center;
+}
+
+button{
     font-family: var(--paragraphfont);
-    font-size: 1rem;
-    padding: 0 2em;
+    font-size: larger;
+    margin: 1em;
+    padding: .5em 2em;
     border-radius: 1em;
+    cursor: pointer;
+}
+section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.description{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+
+    height: 80vh;
+    max-width: 80%;
+}
+.description h2{
+    font-size: 3em;
+    color: var(--headingcolor);
+}
+.description p{
+    font-size: 1.5em;
+}
+.description button{
+    font-size: 1rem;
+    padding: .5em 2em;
+    margin: 1em;
 }
