--- a/home/style.css
+++ b/home/style.css
@@ -152,7 +152,7 @@ header{
 }
 .option-menu-list{
     list-style: none;
-    background-color: #0074D9;
+    background-color:rgba(255, 255, 255, 0.192);
     display: none;
     padding: 0;
     margin: 0;
@@ -269,7 +269,7 @@ section{
         font-size: 1.5rem;
         width: 100%;
         position: absolute;
-        top: 3em;
+        top: 2em;
     }
     .menu-icon{
         display: block;
@@ -280,6 +280,9 @@ section{
     .content-in-about-us{
         width: 95%;
         font-size: 1rem;
+    }
+    .content-in-about-us ul li{
+        font-size: .8rem;
     }
 }
 
