--- a/home/style.css
+++ b/home/style.css
@@ -1,5 +1,5 @@
 :root{
-    --bgcolor: #000022;;
+    --bgcolor: #000022;
     --headingcolor: #FFFFFF;
     --headingfont: 'Tilt Prism', cursive;
     --headingsize: 3rem;
