--- a/createAccount/style.css
+++ b/createAccount/style.css
@@ -12,7 +12,7 @@ font-family: 'Roboto Condensed', sans-serif; */
     --body-bgcolor: #000022;
     --heading-color: #FFFFFF;
     --container-bgcolor: rgba(255, 255, 255, 0.116);
-    --input-color: #080863;
+    --input-color: #f3f3f5;
 }
 
 *{
@@ -27,26 +27,31 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    animation: loadingmenu 1s;
+    position: relative;
 }
 h2{
     font-family: var(--heading-font);
     font-size: var(--heading-size);
     color: var(--heading-color);
 }
-
 .container{
-    background-color: var(--container-bgcolor);
+    /* background-color: var(--container-bgcolor); */
     min-height: 50%;
     min-width: 50%;
+    margin-inline: 1em;
     display: flex;
     flex-direction: column;
     align-items: center;
     /* justify-content: center; */
-    border-radius: 3em;
+    border-radius: 2em;
     padding: 2em;
 }
-
 .logo{
+    position: absolute;
+    top: 0;
+    left: 0;
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -60,6 +65,41 @@ h2{
     min-width: 80%;
 }
 
+.input-container{
+    position: relative;
+    /* margin-top: 2rem; */
+}
+.input-container input{
+    width: 100%;
+    padding: 1em 2em;
+    box-sizing: border-box;
+}
+.input-container label{
+    position: absolute;
+    left: 2em;
+    top: 1.5em;
+    transition: 0.2s;
+    pointer-events: none;
+
+    color: var(--input-color);
+    font-family: var(--title-font);
+    font-size: 1.3rem;
+}
+
+.input-container input::placeholder{
+    opacity: 0;
+}
+.input-container input:focus::placeholder{
+    opacity: 1;
+}
+
+.input-container input:focus + label,
+.input-container input:not(:placeholder-shown) + label{
+    top: .5em;
+    left: 1.5em;
+    font-size: 1em;
+}
+
 .form form{
     display: flex;
     flex-direction: column;
@@ -69,15 +109,34 @@ input{
     margin: .5em;
     border-radius: 1em;
     border: none;
-    font-size: 1rem;
-    color: var(--input-color);
-    /* font-family: var(--title-font); */
-}
-input::placeholder{
-    color: var(--input-color);
-    font-family: var(--title-font);
     font-size: 1.3rem;
+    color: var(--input-color);
+    background-color: var(--container-bgcolor);
+    font-family: var(--title-font);
 }
-input:focus{
-    border: none;
+
+.contents h3{
+    color: var(--heading-color);
+    font-family: var(--title-font);
+    text-align: center;
+}
+.contents h3 a{
+    color: var(--input-color);
+    font-family: var(--heading-font);
+    font-weight: 900;
+    font-size: 1.3em;
+}
+
+@keyframes loadingmenu {
+    0%{
+        opacity: 0;
+        transform: translateY(-17em);
+        transition: ease-in-out;
+    }
+    50%{
+        opacity: .5;
+    }
+    100%{
+        opacity: 1;
+    }
 }
