--- a/login/login.css
+++ b/login/login.css
@@ -2,7 +2,7 @@
 
 :root{
     --heading-font: 'Black Ops One', cursive;
-    --heading-size: 2rem;
+    --heading-size: 1.4rem;
     --title-font: 'Roboto Condensed', sans-serif;
 
     --body-bgcolor: #000022;
@@ -12,6 +12,8 @@
 }
 *{
     text-decoration: none;
+    margin: 0;
+    padding: 0;
 }
 body{
     margin: 0;
@@ -35,11 +37,13 @@ h2{
     border-radius: 2em;
     display: flex;
     align-items: center;
+    background-color: var(--body-bgcolor);
+    z-index: 1;
 }
 
-.logo{
+.logo a{
     position: absolute;
-    top: 0;
+    top: 1em;
     left: 0;
     margin: 1em;
     margin-top: 0;
@@ -162,7 +166,7 @@ input .submit{
     color: var(--input-color);
     font-family: var(--heading-font);
     font-weight: 900;
-    font-size: 1.3em;
+    font-size: 1rem;
     transition: color 0.3s, transform 0.4s;
 }
 h3 a:hover{
@@ -174,24 +178,13 @@ h3 a:hover{
     .container{
         flex-direction: column;
         margin: 5em;
-        max-width: 80%;
-        height: 80%;
+        max-width: 90%;
     }
     .button{
         padding: .5em;
     }
     .container{
         border: none;
-    }
-    .container .image img{
-        border-radius: 2em  2em 0 0;
-    }
-    p{
-        margin: 0;
-        padding: 1em;
-    }
-    input{
-        font-size: 1em;
     }
     .container::after{
         display: none;
